--- a/CONFIG
+++ b/CONFIG
@@ -3,7 +3,7 @@
     {
     "username":"1234567890", //学号
     "password":"mypassword1",
-    "password"_vpn":"mypassword2",
+    "password_vpn":"mypassword2",
     "email":"myemail@qq.com",
     "room":"1234"
     }
